code/spring-boot-k8s-demo/demo-api/k8s/0-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-deployment
spec:
  selector:
    matchLabels:
      app: demo-api
  replicas: 2
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
      - name: demo-api
        image: gitlab:5000/k8s-demo-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: server
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
            scheme: HTTP
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
            scheme: HTTP
          initialDelaySeconds: 10
