code/spring-boot-k8s-demo/demo-api/k8s/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: demo-api
  type: NodePort
